<resources>
    <string name="app_name">LearnApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="menuStart">Start</string>
    <string name="menuAvatar">Avatar</string>
    <string name="menuQuests">Quests</string>
    <string name="menuAbout">About</string>
    <string name="scoreTitle">Score</string>
    <string name="buttonBack">Back</string>
    <string name="buttonOk">OK</string>

    <string name="aboutText">This application was created by Dennis Mathias as part a master project of the WHS.</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="titleLevel">Level</string>
    <string name="requiredExp">Next Level in:</string>
    <string name="titleBonusEffect">Bonus Effect</string>

    <string name="level">Level %1$d</string>
    <string name="newHiScore">New Highscore!</string>
    <string name="answerScore">Answered %1$s correctly</string>
    <string name="progress">%1$d/%2$d</string>
    <string name="gainExp">+%1$d Exp</string>
    <string name="reward">%1$d Exp</string>
    <string name="questComplete">Quest Complete</string>
    <string name="title_activity_selection">Selection</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
</resources>
